--- a/index.html
+++ b/index.html
@@ -1,135 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">    
-</head>
-<body>
-    <img src="./assets/bg_img_1.png" alt="error" class="bg_gradient">
-    <img src="./assets/bg_img_2.png" alt="error" class="bg_gradient">
-    <img src="./assets/bg_img_3.png" alt="error" class="bg_gradient">
-    <img src="./assets/bg_img_4.png" alt="error" class="bg_gradient">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./adaptive_style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <img src="./assets/bg_img_1.png" alt="error" class="bg_gradient" />
+    <img src="./assets/bg_img_2.png" alt="error" class="bg_gradient" />
+    <img src="./assets/bg_img_3.png" alt="error" class="bg_gradient" />
+    <img src="./assets/bg_img_4.png" alt="error" class="bg_gradient" />
     <div class="container">
+      <!-- burger start  -->
 
-    <!-- navbar start     -->
-
-        <div class="navbar">
-            <img src="./assets/logo.svg.svg" alt="error" class="navbar__logo">
-            <ul class="navbar__list">
-                <li class="list__item"><a href="#">Home</a></li>
-                <li class="list__item"><a href="#">Services</a></li>
-                <li class="list__item"><a href="#">Our Project</a></li>
-                <li class="list__item"><a href="#">About us</a></li>
-            </ul>
-            <input type="text" class="navbar__input">
+      <div class="burger-menu">
+        <div class="burger-menu__content">
+          <img
+            src="./assets/cancel_btn.png"
+            alt="cancel"
+            class="burger-menu__btn_close"
+          />
+          <input type="text" class="burger-menu__input" />
+          <ul class="burger-menu__list">
+            <li class="burger__item"><a href="#">Home</a></li>
+            <li class="burger__item"><a href="#">Services</a></li>
+            <li class="burger__item"><a href="#">Our Project</a></li>
+            <li class="burger__item"><a href="#">About us</a></li>
+          </ul>
         </div>
+      </div>
 
-    <!-- navbar  end -->
-        
-    <!-- header start -->
+      <!-- burger end  -->
 
-        <header>
-            <div class="header__block_left">
-                <h1 class="header__title_left"> Build Your Awesome Platform</h1>
-                <p class="header__desc_left">Enver studio is a digital studio that offers several services such as UI/UX Design to developers, we will provide the best service for those of you who use our services.</p>
-                <button class="header__btn">
-                    Our Services
-                    <img src="./assets/btn_icon.png" alt="" class="btn__icon">
-                </button>
-            </div>
-            <div class="header__block_right">
-                <img src="./assets/header_img.png" alt="" class="header__img">
-                <img src="./assets/vector_1.png" alt="" class="vector" id="vector_1">
-                <img src="./assets/vector_2.png" alt="" class="vector" id="vector_2">
-                <img src="./assets/vector_3.png" alt="" class="vector" id="vector_3">
-                <img src="./assets/vector_4.png" alt="" class="vector" id="vector_4">
-            </div>
-        </header>
+      <!-- navbar start     -->
 
-    <!-- services block start -->
+      <div class="navbar">
+        <img src="./assets/logo.svg.svg" alt="error" class="navbar__logo" />
+        <ul class="navbar__list">
+          <li class="list__item"><a href="#">Home</a></li>
+          <li class="list__item"><a href="#">Services</a></li>
+          <li class="list__item"><a href="#">Our Project</a></li>
+          <li class="list__item"><a href="#">About us</a></li>
+        </ul>
+        <input type="text" class="navbar__input" />
+        <img src="./assets/navbar_btn.png" alt="" class="navbar__btn_burger" />
+      </div>
 
-        <div class="services">
-            <h2 class="services__title_main">The Service We Provide For You</h2>
-            <ul class="services__list">
-                <li class="services__item">
-                    <img src="./assets/service_icon_1.png" alt="" class="services__icon">
-                    <h4 class="services__title">Development</h4>
-                    <p class="services__desc">Create a platform with the best and coolest quality from us.</p>
-                </li>
-                <li class="services__item">
-                    <img src="./assets/service_icon_2.png" alt="" class="services__icon">
-                    <h4 class="services__title">UI/UX Designer</h4>
-                    <p class="services__desc">We provide UI/UX Design services, and of course with the best quality</p>
-                </li>
-                <li class="services__item">
-                    <img src="./assets/service_icon_3.png" alt="" class="services__icon">
-                    <h4 class="services__title">Graphik Designer</h4>
-                    <p class="services__desc">We provide Graphic Design services, with the best designers</p>
-                </li>
-                <li class="services__item">
-                    <img src="./assets/service_icon_4.png" alt="" class="services__icon">
-                    <h4 class="services__title">Motion Graphik</h4>
-                    <p class="services__desc">Create a platform with the best and coolest quality from us.</p>
-                </li>
-                <li class="services__item">
-                    <img src="./assets/service_icon_5.png" alt="" class="services__icon">
-                    <h4 class="services__title">Photography</h4>
-                    <p class="services__desc">We provide Photography services, and of course with the best quality</p>
-                </li>
-                <li class="services__item">
-                    <img src="./assets/service_icon_6.png" alt="" class="services__icon">
-                    <h4 class="services__title">Videography</h4>
-                    <p class="services__desc">Create a platform with the best and coolest quality from us.</p>
-                </li>
-            </ul>
+      <!-- navbar  end -->
+
+      <!-- header start -->
+
+      <header>
+        <div class="header__block_left">
+          <h1 class="header__title_left">Build Your Awesome Platform</h1>
+          <p class="header__desc_left">
+            Enver studio is a digital studio that offers several services such
+            as UI/UX Design to developers, we will provide the best service for
+            those of you who use our services.
+          </p>
+          <button class="header__btn">
+            Our Services
+            <img src="./assets/btn_icon.png" alt="" class="btn__icon" />
+          </button>
         </div>
-
-    <!-- services block end -->
-
-    <!-- portfolio block  start-->
-
-        <div class="portfolio">
-            <h2 class="portfolio__title">Our Awesome Portfolio</h2>
-            <ul class="portfolio__list">
-                <li class="portfolio__list_item"><img src="./assets/portfolio_img_1.png" alt="error"></li>
-                <li class="portfolio__list_item"><img src="./assets/portfolio_img_2.png" alt="error"></li>
-                <li class="portfolio__list_item"><img src="./assets/portfolio_img_3.png" alt="error"></li>
-            </ul>
-            <img src="./assets/carousel_icon.png" alt="error" class="portfolio__icon">
-            <img src="./assets/portfolio_toggle.png" alt="error" class="portfolio__icon_second">
+        <div class="header__block_right">
+          <img src="./assets/header_img.png" alt="" class="header__img" />
+          <img
+            src="./assets/vector_1.png"
+            alt=""
+            class="vector"
+            id="vector_1"
+          />
+          <img
+            src="./assets/vector_2.png"
+            alt=""
+            class="vector"
+            id="vector_2"
+          />
+          <img
+            src="./assets/vector_3.png"
+            alt=""
+            class="vector"
+            id="vector_3"
+          />
+          <img
+            src="./assets/vector_4.png"
+            alt=""
+            class="vector"
+            id="vector_4"
+          />
         </div>
+      </header>
 
-    <!-- portfolio block  end-->
+      <!-- services block start -->
 
-    <!-- info block start -->
+      <div class="services">
+        <h2 class="services__title_main">The Service We Provide For You</h2>
+        <ul class="services__list">
+          <li class="services__item">
+            <img
+              src="./assets/service_icon_1.png"
+              alt=""
+              class="services__icon"
+            />
+            <h4 class="services__title">Development</h4>
+            <p class="services__desc">
+              Create a platform with the best and coolest quality from us.
+            </p>
+          </li>
+          <li class="services__item">
+            <img
+              src="./assets/service_icon_2.png"
+              alt=""
+              class="services__icon"
+            />
+            <h4 class="services__title">UI/UX Designer</h4>
+            <p class="services__desc">
+              We provide UI/UX Design services, and of course with the best
+              quality
+            </p>
+          </li>
+          <li class="services__item">
+            <img
+              src="./assets/service_icon_3.png"
+              alt=""
+              class="services__icon"
+            />
+            <h4 class="services__title">Graphik Designer</h4>
+            <p class="services__desc">
+              We provide Graphic Design services, with the best designers
+            </p>
+          </li>
+          <li class="services__item">
+            <img
+              src="./assets/service_icon_4.png"
+              alt=""
+              class="services__icon"
+            />
+            <h4 class="services__title">Motion Graphik</h4>
+            <p class="services__desc">
+              Create a platform with the best and coolest quality from us.
+            </p>
+          </li>
+          <li class="services__item">
+            <img
+              src="./assets/service_icon_5.png"
+              alt=""
+              class="services__icon"
+            />
+            <h4 class="services__title">Photography</h4>
+            <p class="services__desc">
+              We provide Photography services, and of course with the best
+              quality
+            </p>
+          </li>
+          <li class="services__item">
+            <img
+              src="./assets/service_icon_6.png"
+              alt=""
+              class="services__icon"
+            />
+            <h4 class="services__title">Videography</h4>
+            <p class="services__desc">
+              Create a platform with the best and coolest quality from us.
+            </p>
+          </li>
+        </ul>
+      </div>
 
-        <div class="info__block">
-            <h2 class="info__block_title">Contact us for the service you want to use</h2>
-            <button class="info__block_btn">Contact us</button>
-        </div>
+      <!-- services block end -->
 
-    <!-- info block end -->
+      <!-- portfolio block  start-->
 
-    <!-- footer block start -->
+      <div class="portfolio">
+        <h2 class="portfolio__title">Our Awesome Portfolio</h2>
+        <ul class="portfolio__list">
+          <li class="portfolio__list_item">
+            <img src="./assets/portfolio_img_1.png" alt="error" />
+          </li>
+          <li class="portfolio__list_item">
+            <img src="./assets/portfolio_img_2.png" alt="error" />
+          </li>
+          <li class="portfolio__list_item">
+            <img src="./assets/portfolio_img_3.png" alt="error" />
+          </li>
+        </ul>
+        <img
+          src="./assets/carousel_icon.png"
+          alt="error"
+          class="portfolio__icon"
+        />
+        <img
+          src="./assets/portfolio_toggle.png"
+          alt="error"
+          class="portfolio__icon_second"
+        />
+      </div>
 
-    <footer>
-        <img src="./assets/logo.svg.svg" alt="" class="footer__logo">
+      <!-- portfolio block  end-->
+
+      <!-- info block start -->
+
+      <div class="info__block">
+        <h2 class="info__block_title">
+          Contact us for the service you want to use
+        </h2>
+        <button class="info__block_btn">Contact us</button>
+      </div>
+
+      <!-- info block end -->
+
+      <!-- footer block start -->
+
+      <footer>
+        <img src="./assets/logo.svg.svg" alt="" class="footer__logo" />
         <ul class="footer__list">
-            <li class="footer__list_item">Support</li>
-            <li class="footer__list_item">Privancy Policy</li>
-            <li class="footer__list_item">Terms and Conditions</li>
+          <li class="footer__list_item">Support</li>
+          <li class="footer__list_item">Privancy Policy</li>
+          <li class="footer__list_item">Terms and Conditions</li>
         </ul>
         <p class="footer__info">© 2022 Enver, All Rights Reserved</p>
-    </footer>
+      </footer>
 
-    <!-- footer block end -->
-
+      <!-- footer block end -->
     </div>
-</body>
+
+    <script>
+      let openBtn = document.querySelector(".navbar__btn_burger");
+      let closeBtn = document.querySelector(".burger-menu__btn_close");
+      let burgerMenu = document.querySelector(".burger-menu");
+
+      openBtn.addEventListener("click", () => {
+        burgerMenu.style.display = "block";
+      });
+
+      closeBtn.addEventListener("click", () => {
+        burgerMenu.style.display = "none";
+      });
+    </script>
+  </body>
 </html>
